# OpenTrading

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  WORKFLOWS.md  install.sh  pyproject.toml  watchlist.example.json
.claude/: settings.json
.claude/skills/catalyst-calendar/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/desk-note/: SKILL.md
.claude/skills/market-report/: SKILL.md
.claude/skills/short-term-trader/: SKILL.md
.claude/skills/short-term-trader/references/: crypto.md  execution-plan.md  financialjuice-agent.md  intraday-email.md  learned-strategy.md  macro-dashboard.md  portfolio-desk.md  strategy.md
.claude/skills/stock-picker/: SKILL.md
.claude/skills/stock-picker/references/: debate.md  quality-moat.md  red-flags.md  supply-chain.md  universe.md  validation.md
.github/workflows/: daily-market.yml
docs/: CLOUD.md  METHOD.md  METHODOLOGY.md  MR_desk-evidence-blocks.md  README.md  RELEASE_NOTES.md  SMART_MONEY.md  WORKFLOWS.md
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: daily-email.md  getting-started.md  intro.md  methodology.md  prediction-desk.md  smart-money.md  web-dashboard.md
docs-site/i18n/zh-Hans/: code.json
docs-site/i18n/zh-Hans/docusaurus-plugin-content-docs/: current.json
docs-site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: daily-email.md  getting-started.md  intro.md  methodology.md  prediction-desk.md  (+2 more)
docs-site/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
docs-site/src/components/HomepageFeatures/: index.js  styles.module.css
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js  index.module.css
evals/: evals.json
tests/: test_desk.py  test_golden.py
tools/audit/: privacy_audit.py
tools/brief/: README.md  daily_brief.py  daily_email_claude.sh  install_schedule.sh  news_email.sh  roster_mailer.sh  wrap_html.py
tools/catalysts/: README.md  calendar.json  catalysts.py
tools/china/: README.md  cn.py  cnpack.py
tools/crypto/: hl.py
tools/earnings/: README.md  earnings.py
tools/email/: README.md  market_email.sh  send_email.py
tools/financialjuice/: README.md  fj.py
tools/forecast/: tfm.py
tools/ibkr/: README.md  ibkr.py
tools/llm/: claude_cli.py  codex_cli.py  debate.py  gemini.py  llm.py  openrouter.py
tools/macro/: README.md  macro.py
tools/options/: README.md  opt.py
tools/predict/: README.md  poly.py
tools/quant/: quant.py
tools/quote/: q.py
tools/rank/: README.md  rank.py
tools/reflect/: reflect.py
tools/report/: manifest.py  report.py
tools/research/: research.py
tools/sim/: README.md  decide.py  strategy.py  symbols.py  yfhist.py
tools/smartmoney/: sm.py
tools/trade/: README.md  auto.py  conc.py  decay.py  paper.py  propose.py
tools/tradingview/: README.md  tv.py
tools/validate/: validate.py
tools/web/: README.md  index.html  server.py
tools/whales/: whales.py
